# Internal-Knowledge-AI-Agent

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FINAL_CHECKLIST.md  LICENSE  Makefile  README.md  SECURITY.md  SPEC_COMPLIANCE_REPORT.md  docker-compose.e2e.yml  docker-compose.override.yml  docker-compose.yml  fix_hba.sh  test_095_out.txt  tmp_enable_logging.sh
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  check_tables.py  pyproject.toml  pytest_out.txt  pytest_out2.txt  pytest_output.txt  pytest_output2.txt  pytest_output4.txt  pytest_output5.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_enable_pgvector.py  0002_user_refresh_tokens.py  0003_add_users_invitations.py  0004_password_reset_tokens.py  0005_expand_invitation_token.py  0006_sources.py  0007_documents_chunks.py  0008_source_permissions.py  0009_sync_jobs.py  0010_chat.py  0011_chat_source_ids.py  0012_system_health_events.py  0013_company_policies.py  0014_llm_configurations.py  0015_user_last_login_at.py  0016_connectors.py  0017_guardrail_events.py  0018_source_fields.py  0019_user_citations_preference.py  0020_chat_message_fields.py  0021_source_description_history.py  0022_chunks_cosine_op_fix.py  0023_ai_models_embedders.py  0024_backfill_ai_models.py  0025_add_deleted_at_to_sources.py  0025_add_schema_study.py  0026_documents_chunks_timestamp_defaults.py  0027_add_schema_study.py  0028_source_auto_naming.py  0029_chat_message_feedback.py  0030_source_connection_health.py  0031_admin_audit_log_metadata_trgm_index.py  (+7 more)
backend/docs/: source-db-readonly-setup.sql
backend/evals/: BASELINE.md  __init__.py  compare.py  fixtures_loader.py  judge.py  run.py  schema.py
backend/src/: main.py
backend/tests/: conftest.py
(+993 files in other folders)
