[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "knowledge-agent-backend"
version = "0.1.0"
description = "Internal Knowledge AI Agent Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "pydantic[email]>=2.0",
    "pydantic-settings>=2.0",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "celery[redis]>=5.3",
    "redis>=5.0",
    "langchain-core>=0.3",
    "langgraph>=0.2",
    "langfuse>=2.0",
    "langchain-openai>=0.2",
    "langchain-text-splitters>=0.2.0",
    "minio>=7.2",
    "cryptography>=43.0",
    "dependency-injector>=4.41",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "PyPDF2>=3.0.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "structlog>=24.0",
    "asyncpg>=0.29",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
    "factory-boy>=3.3",
    "faker>=26.0",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "anyio[trio]>=4.0",
    "bcrypt>=4.1",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-q --tb=short"
